popular tours, destination added with mobile view

--- a/index.html
+++ b/index.html
@@ -28,6 +28,96 @@
                 </ul>
             </div>
         </nav>
+        <div class="explore-container">
+            <div class="explore-text-container">
+                <div class="explore-content">
+                    <h1 class="explore-title">Explore Your Travel</h1>
+                    <p class="explore-description">Embark on a Bangladesh adventure: Explore rich culture, scenic landscapes, and historical treasures, creating unforgettable memories in this vibrant destination.</p>
+                </div>
+            </div>
+            <div class="place-select">
+                    <input type="text" class="place-input" placeholder="Where go">
+                    <select name="when" id="when" class="place-input input-select">
+                        <option value="day">When</option>
+                        <option value="day">Day</option>
+                        <option value="night">Night</option>
+                    </select>
+                    <select name="type" id="type" class="place-input input-select">
+                        <option value="day">Select Type</option>
+                        <option value="day">Day</option>
+                        <option value="night">Night</option>
+                    </select>
+                    <div class="btn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    <a class="btn-find">Find Now</a>
+                    </div>
+            </div>
+        </div>
     </header>
+
+    <main>
+        <section class="popular-tours section-gap">
+            <div class="box text-container">
+                <h2 class="section-title">Our Popular Tours</h2>
+            <p class="section-description">Embark on unforgettable journeys with our popular plans, each promising unique experiences and unparalleled adventures.
+            </p>
+            <ul class="list">
+                <li>Discover cultural wonders and historical treasures in vibrant cities and serene landscapes.</li>
+                <li>Indulge in adventurous activities, from thrilling hikes to tranquil boat rides.</li>
+                <li>Enjoy exquisite cuisine and immerse yourself in local traditions, creating memories that last a lifetime.</li>
+            </ul>
+            <p class="section-description">
+                Craft your ideal travel experience with our popular plans. Immerse yourself in unique adventures, creating lasting memories with every moment.
+            </p>
+            <button class="btn-primary">Read More</button>
+            </div>
+            <div class="box">
+                <img src="./Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+
+        <section class="destination section-gap">
+            <div class="destination-text-container">
+                <h2 class="section-title dest-title">Choose Your Destination</h2>
+                <p class="section-description dest-para">Select your dream destination, unlocking a world of possibilities and creating unforgettable memories on your personalized journey.</p>
+            </div>
+            <div class="destination-img-container">
+                <div class="row1">
+                    <div class="maldives">
+                        <p class="country-name">Maldives</p>
+                        <img class="width" src="./Images/Rectangle 5.png" alt="">
+                    </div>
+                    <div class="Indonesia">
+                        <p class="country-name">Indonesia</p>
+                        <img class="width" src="./Images/Rectangle 8.png" alt="">
+                    </div>
+                </div>
+                <div class="row2">
+                    <div class="srilanka">
+                        <p class="country-name">Sri Lanka</p>
+                        <img class="width" src="./Images/Rectangle 6.png" alt="">
+                    </div>
+                    <div class="northamerica">
+                        <p class="country-name">North America</p>
+                        <img class="width" src="./Images/Rectangle 7.png" alt="">
+                    </div>
+                    <div class="kashmir">
+                        <p class="country-name">Kashmir</p>
+                        <img class="width" src="./Images/Rectangle 9.png" alt="">
+                    </div>
+                </div>
+                <div class="row3">
+                    <div class="Bangladesh"> 
+                        <p class="country-name">Bangladesh</p>
+                        <img class="width" src="./Images/Rectangle 11.png" alt="">
+                    </div>
+                    <div class="bandarban">
+                        <p class="country-name">Bandarban</p>
+                        <img class="width" src="./Images/Rectangle 10.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
