newsletter and why choose us section added (both)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="nav-items">
                 <i class="fa-solid fa-bars menu-icon"></i>
                 <ul>
-                    <li> <a href="">Home</a> </li>
+                    <li> <a href="index.html" >Home</a> </li>
                     <li> <a href="">Packages</a></li>
                     <li> <a href="">Testimonial</a></li>
                     <li> <a href="">Blog</a></li>
@@ -115,6 +115,51 @@
                         <p class="country-name">Bandarban</p>
                         <img class="width" src="./Images/Rectangle 10.png" alt="">
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="choose section-gap">
+            <div class="headings">
+                <h2 class="section-title dest-title">Why Choose Us</h2>
+                <p class="section-description dest-para">
+                    Choose us for unparalleled expertise, personalized service, and a seamless travel experience tailored just for you."
+                </p>
+            </div>
+            <div class="reasons-container">
+                <div class="reason1">
+                    <img src="./Images/hotel 1.svg" alt="">
+                    <h3 class="reason-title">Handpicked Hotels</h3>
+                    <p class="reason-para">Indulge in luxury and comfort with our handpicked hotels, ensuring an exquisite stay that perfectly complements your travel experience.</p>
+                </div>
+                <div class="reason2">
+                    <img src="./Images/map 1.svg" alt="">
+                    <h3 class="reason-title">World Class Service</h3>
+                    <p class="reason-para">Experience excellence with our world-class service, where attention to detail, personalized care, and dedication redefine luxury in hospitality.</p>
+                </div>
+                <div class="reason3">
+                    <img src="./Images/price-tag 1.svg" alt="">
+                    <h3 class="reason-title">Best Price Guarantee</h3>
+                    <p class="reason-para">Secure the best deals with our Best Price Guarantee, ensuring unbeatable rates for a delightful and budget-friendly travel experience.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="newsletter section-gap">
+            <div class="newsletter-form">
+                <h2 class="newsletter-title">Newsletter</h2>
+                <p class="newsletter-para">Get your daily dose of travel news & tips. Sign up today!</p>
+                <div class="inputs">
+                    <input type="text" placeholder="Enter Your Name" class="news-inp">
+                    <input type="text" placeholder="Enter your email"class="news-inp">
+                </div>
+                <button class="subscribe">Subscribe</button>
+            </div>
+            <div class="newsletter-img">
+                <img src="./Images/Rectangle 8 (1).png" alt="">
+                <div class="savings">
+                    <p class="save-para">Travel.com</p>
+                    <h2 class="save-title">Save up to 70%</h2>
                 </div>
             </div>
         </section>
