footer and review added

--- a/index.html
+++ b/index.html
@@ -145,6 +145,42 @@
             </div>
         </section>
 
+        <section class="review section-gap">
+            <div class="review-text">
+                <h2 class="section-title review-title">Customer Review</h2>
+                <p class="review-para">Read what our happy travelers say. Real stories, genuine experiences. Join the chorus of satisfied explorers sharing their adventures with us.</p>
+            </div>
+            <div class="review-container">
+                <div class="reviews">
+                    <img src="./Images/Mahbub.jpg" alt="" class="user-photo">
+                    <div>
+                        <div class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+                    <p>Amazing experience! Loved every moment of the tour. Highly recommended.</p>
+                    <p><strong>Mahbub Sarwar</strong></p>
+                    </div>
+                </div>
+        
+                <div class="reviews">
+                    <img src="./Images/Mahbub.jpg" alt="" class="user-photo">
+                    <div>
+                        <div class="stars">&#9733;&#9733;&#9733;&#9733;&#9734;</div>
+                        <p>Great service and beautiful destinations. Will definitely book again!</p>
+                        <p><strong>Mahan Choudhury</strong></p>
+                    </div>
+                </div>
+            
+                <div class="reviews">
+                    <img src="./Images/Rectangle 1.png" alt="" class="user-photo">
+                    <div>
+                        <div class="stars">&#9733;&#9733;&#9733;&#9733;&#9734;</div>
+                        <p>The destinations are selected with a resonable prices. Really enjoyed the tour. </p>
+                        <p><strong>Farah Ireen</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
+
         <section class="newsletter section-gap">
             <div class="newsletter-form">
                 <h2 class="newsletter-title">Newsletter</h2>
@@ -164,5 +200,24 @@
             </div>
         </section>
     </main>
+    <footer class="footer section-gap">
+        <div class="website-name footer-website">
+            <img src="./Images/Group 40071 (2).png" alt="">
+            <h2 class="website-title">Trust <span class="orange-color">Travels</span></h2>
+        </div>
+        <div class="footer-para">
+            <p>Explore, experience, and enjoy your journey with us. Unforgettable memories await. Thank you for choosing us!</p>
+        </div>
+        <div class="social-media">
+            <i class="fa-brands fa-twitter twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+        </div>
+        <div class="hrule">
+            <hr>
+        </div>
+        <p class="reserved">2024, All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
