added different types of views

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="headings">
                 <h2 class="section-title dest-title">Why Choose Us</h2>
                 <p class="section-description dest-para">
-                    Choose us for unparalleled expertise, personalized service, and a seamless travel experience tailored just for you."
+                    Choose us for unparalleled expertise, personalized service, and a seamless travel experience tailored just for you.
                 </p>
             </div>
             <div class="reasons-container">
@@ -179,6 +179,122 @@
                 </div>
             </div>
         </div>
+        </section>
+
+        <section class="deals section-gap">
+            <div class="headings">
+                <h2 class="section-title dest-title">Deals & Discounts</h2>
+                <p class="section-description dest-para">
+                    Unlock exclusive deals and discounts, turning your dream getaway into a reality without breaking the bank. Don't miss out!
+                </p>
+            </div>
+            <div class="deals-img-container">
+                <div class="deals-content">
+                    <div class="deals-img">
+                        <img src="./Images/Group 39.png" alt="">
+                    </div>
+                    <div class="all-deals">
+                        <div class="deals-details">
+                            <div class="day">
+                                <i class="fa-regular fa-clock icon-color"></i>
+                                <p class="day-details">7 Day / 6 Night</p>
+                            </div>
+                            <div class="day">
+                                <i class="fa-solid fa-user-group icon-color"></i>
+                                <p class="day-details">Max : 10</p>
+                            </div>
+                            <div class="day">
+                                <i class="fa-solid fa-location-dot icon-color"></i>
+                                <p class="day-detatils">Malaysia</p>
+                            </div>
+                        </div>
+                        <div class="full-deals">
+                            <h2 class="deals-heading">Tour To Satorini</h2>
+                            <p class="deals-desc">Amet consectetur. Vulputate commodo felis 
+                                molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                            <p class="deals-price">Price: $1300-$1500</p>
+                            <button class="btn-primary">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="deals-img-container">
+                <div class="deals-content">
+                    <div class="deals-img">
+                        <img src="./Images/Group 40.png" alt="">
+                    </div>
+                    <div class="all-deals1">
+                        <div class="deals-details">
+                            <div class="day">
+                                <i class="fa-regular fa-clock icon-color"></i>
+                                <p class="day-details">7 Day / 6 Night</p>
+                            </div>
+                            <div class="day">
+                                <i class="fa-solid fa-user-group icon-color"></i>
+                                <p class="day-details">Max : 10</p>
+                            </div>
+                            <div class="day">
+                                <i class="fa-solid fa-location-dot icon-color"></i>
+                                <p class="day-detatils">Malaysia</p>
+                            </div>
+                        </div>
+                        <div class="full-deals">
+                            <h2 class="deals-heading">Tour To Satorini</h2>
+                            <p class="deals-desc">Amet consectetur. Vulputate commodo felis 
+                                molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                            <p class="deals-price">Price: $1300-$1500</p>
+                            <button class="btn-primary">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="deals-img-container">
+                <div class="deals-content">
+                    <div class="deals-img">
+                        <img src="./Images/Group 39.png" alt="">
+                    </div>
+                    <div class="all-deals">
+                        <div class="deals-details">
+                            <div class="day">
+                                <i class="fa-regular fa-clock icon-color"></i>
+                                <p class="day-details">7 Day / 6 Night</p>
+                            </div>
+                            <div class="day">
+                                <i class="fa-solid fa-user-group icon-color"></i>
+                                <p class="day-details">Max : 10</p>
+                            </div>
+                            <div class="day">
+                                <i class="fa-solid fa-location-dot icon-color"></i>
+                                <p class="day-detatils">Malaysia</p>
+                            </div>
+                        </div>
+                        <div class="full-deals">
+                            <h2 class="deals-heading">Tour To Satorini</h2>
+                            <p class="deals-desc">Amet consectetur. Vulputate commodo felis 
+                                molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                            <p class="deals-price">Price: $1300-$1500</p>
+                            <button class="btn-primary">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="getlost section-gap">
+            <div class="getlost-text-container">
+                <h2 class="section-title lost-title">A Simple Perfect Place <br> To Get Lost</h2>
+                <p class="lost-para section-description">
+                    Escape to serenity: A simple, perfect place to get lost in nature's embrace and find tranquility.
+                </p>
+                <ul class="list lost-list">
+                    <li>Amid lush landscapes, discover hidden trails and picturesque vistas.</li>
+                    <li>Immerse yourself in a peaceful haven, where time slows, and nature's wonders unfold.</li>
+                </ul>
+                <button class="btn-primary btn-lost">See More</button>
+            </div>
+            <div class="getlost-video">
+                <video src="./Images/video.mp4" controls width="200px"></video>
+            </div>
         </section>
 
         <section class="newsletter section-gap">
