dummy text removed in deals section

--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
                         </div>
                         <div class="full-deals">
                             <h2 class="deals-heading">Tour To Satorini</h2>
-                            <p class="deals-desc">Amet consectetur. Vulputate commodo felis 
-                                molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                            <p class="deals-desc">Experience the allure of Santorini's beauty with our tour, featuring captivating landscapes, charming architecture, and unforgettable moments in paradise.</p>
                             <p class="deals-price">Price: $1300-$1500</p>
                             <button class="btn-primary">Book Now</button>
                         </div>
@@ -240,8 +239,7 @@
                         </div>
                         <div class="full-deals">
                             <h2 class="deals-heading">Tour To Satorini</h2>
-                            <p class="deals-desc">Amet consectetur. Vulputate commodo felis 
-                                molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                            <p class="deals-desc">Experience the allure of Santorini's beauty with our tour, featuring captivating landscapes, charming architecture, and unforgettable moments in paradise.</p>
                             <p class="deals-price">Price: $1300-$1500</p>
                             <button class="btn-primary">Book Now</button>
                         </div>
@@ -270,8 +268,7 @@
                         </div>
                         <div class="full-deals">
                             <h2 class="deals-heading">Tour To Satorini</h2>
-                            <p class="deals-desc">Amet consectetur. Vulputate commodo felis 
-                                molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                            <p class="deals-desc">Experience the allure of Santorini's beauty with our tour, featuring captivating landscapes, charming architecture, and unforgettable moments in paradise.</p>
                             <p class="deals-price">Price: $1300-$1500</p>
                             <button class="btn-primary">Book Now</button>
                         </div>
