see all packages button added

--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
                     </div>
                 </div>
             </div>
+            <div class="btn-packages">
+                <button class="btn-primary">See All Packages</button>
+            </div>
         </section>
 
         <section class="getlost section-gap">
