hrule added in newsletter

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 </div>
             </div>
             <div class="btn-packages">
-                <button class="btn-primary">See All Packages</button>
+                <button class="btn-primary btn-packages">See All Packages</button>
             </div>
         </section>
 
@@ -301,6 +301,7 @@
             <div class="newsletter-form">
                 <h2 class="newsletter-title">Newsletter</h2>
                 <p class="newsletter-para">Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr class="hrule-news">
                 <div class="inputs">
                     <input type="text" placeholder="Enter Your Name" class="news-inp">
                     <input type="text" placeholder="Enter your email"class="news-inp">
